Fix main-containers alignment
- Add missing padding on header's mobile version
- Change flex-wrap property from only desktop to any device

--- a/styles/nav-header.css
+++ b/styles/nav-header.css
@@ -3,7 +3,7 @@ header {
     background-color: var(--surface-color);
     width: 100%;
     height: 4.5rem;
-    margin-inline: auto;
+    padding: 1rem;
 
     & > img {
         width: 10.125rem;
